# grammarette

./: pyproject.toml
grammarette/: __init__.py  grammarette.py  msa.py
